adding <Menu /> component

--- a/menu/index.html
+++ b/menu/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-	<title>Menu from shelter</title>
+	<title>UI from shelter</title>
 	<link rel="stylesheet" type="text/css" href="styles/css/main.css" />
 </head>
 
