--- a/menu/index.html
+++ b/menu/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>UI from shelter</title>
 	<link rel="stylesheet" type="text/css" href="styles/css/main.css" />
+	<link rel="stylesheet" type="text/css" href="styles/fonts/fonts.css" />
 </head>
 
 <body style='margin: 0; padding: 0;'>
