fix: changing from Gulp to Webpack

--- a/menu/index.html
+++ b/menu/index.html
@@ -8,6 +8,5 @@
 
 <body style='margin: 0; padding: 0;'>
 	<div class="app"></div>
-
-	<script src="public/bundle.js"></script>
+	<script src="dist/app.bundle.js"></script>
 </body>
