Improvements for webpack config and etc

--- a/menu/index.html
+++ b/menu/index.html
@@ -7,5 +7,5 @@
 
 <body style='margin: 0; padding: 0;'>
 	<div class="app"></div>
-	<script src="dist/app.bundle.ts"></script>
+	<script src="dist/app.bundle.js"></script>
 </body>
