Types & Webpack improvements

--- a/menu/index.html
+++ b/menu/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-
-<head>
-	<title>UI from shelter</title>
-	<link rel="stylesheet" type="text/css" href="styles/css/main.css" />
-</head>
-
-<body style='margin: 0; padding: 0;'>
-	<div class="app"></div>
-	<script src="dist/app.bundle.js"></script>
-</body>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Webpack App</title>
+  </head>
+  <body>
+    <div id='app'></div>
+    <script type="text/javascript" src="/dist/app.bundle.js"></script>
+  </body>
+</html>
