--- a/menu/index.html
+++ b/menu/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Webpack App</title>
+    <link rel='stylesheet' type='text/css' href='./styles/css/main.css'></link>
   </head>
   <body>
     <div id='app'></div>
