--- a/menu/index.html
+++ b/menu/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Webpack App</title>
-    <link rel='stylesheet' type='text/css' href='./styles/css/main.css'></link>
+    <link rel='stylesheet' type='text/css' href='src/styles/css/main.css'></link>
   </head>
   <body>
     <div id='app'></div>
-    <script type="text/javascript" src="/dist/app.bundle.js"></script>
+    <script type="text/javascript" src="dist/app.bundle.js"></script>
   </body>
 </html>
